Codigo/LL1XccParser.java
// Generated from LL1Xcc.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class LL1XccParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		CLASS=1, EXTENDS=2, ABRCHAVE=3, PTVIR=4, FECHCHAVE=5, INT=6, STRING=7, 
		ABRCOL=8, FECHCOL=9, VIRG=10, CONSTRUCTOR=11, ABRPAR=12, FECHPAR=13, BREAK=14, 
		ATR=15, PRINT=16, READ=17, RETURN=18, SUPER=19, IF=20, ELSE=21, FOR=22, 
		PONTO=23, NEW=24, MENOR=25, MAIOR=26, MENORIG=27, MAIORIG=28, IGUAL=29, 
		DIFER=30, OPMAIS=31, OPMENOS=32, OPVEZES=33, OPDIV=34, OPMOD=35, NULL=36, 
		THEN=37, INTCONSTANT=38, STRINGCONSTANT=39, IDENT=40, WS=41;
	public static final int
		RULE_program = 0, RULE_program2 = 1, RULE_program3 = 2, RULE_dec = 3, 
		RULE_vardecl = 4, RULE_intstringident = 5, RULE_cols = 6, RULE_vardecl1 = 7, 
		RULE_exps = 8, RULE_constructdecl = 9, RULE_methoddecl = 10, RULE_methodbody = 11, 
		RULE_paramlist = 12, RULE_paramlist1 = 13, RULE_statement = 14, RULE_intstring = 15, 
		RULE_virgidentcols = 16, RULE_statement2 = 17, RULE_statement3 = 18, RULE_expralocexpr = 19, 
		RULE_atribstat = 20, RULE_printstat = 21, RULE_readstat = 22, RULE_returnstat = 23, 
		RULE_returnstat1 = 24, RULE_superstat = 25, RULE_ifstat = 26, RULE_ifstat1 = 27, 
		RULE_forstat = 28, RULE_forstat1 = 29, RULE_forstat2 = 30, RULE_statlist = 31, 
		RULE_statlist1 = 32, RULE_lvalue = 33, RULE_lvalue2 = 34, RULE_lvalue3 = 35, 
		RULE_alocexpression = 36, RULE_alocexpression2 = 37, RULE_alocexpression3 = 38, 
		RULE_alocexpression4 = 39, RULE_alocexpression5 = 40, RULE_expression = 41, 
		RULE_expression2 = 42, RULE_expresion3 = 43, RULE_numexpression = 44, 
		RULE_numexpression2 = 45, RULE_term = 46, RULE_term1 = 47, RULE_unaryexpr = 48, 
		RULE_factor = 49, RULE_arglist = 50, RULE_arglist1 = 51;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "program2", "program3", "dec", "vardecl", "intstringident", 
			"cols", "vardecl1", "exps", "constructdecl", "methoddecl", "methodbody", 
			"paramlist", "paramlist1", "statement", "intstring", "virgidentcols", 
			"statement2", "statement3", "expralocexpr", "atribstat", "printstat", 
			"readstat", "returnstat", "returnstat1", "superstat", "ifstat", "ifstat1", 
			"forstat", "forstat1", "forstat2", "statlist", "statlist1", "lvalue", 
			"lvalue2", "lvalue3", "alocexpression", "alocexpression2", "alocexpression3", 
			"alocexpression4", "alocexpression5", "expression", "expression2", "expresion3", 
			"numexpression", "numexpression2", "term", "term1", "unaryexpr", "factor", 
			"arglist", "arglist1"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'class'", "'extends'", "'{'", "';'", "'}'", "'int'", "'string'", 
			"'['", "']'", "','", "'constructor'", "'('", "')'", "'break'", "'='", 
			"'print'", "'read'", "'return'", "'super'", "'if'", "'else'", "'for'", 
			"'.'", "'new'", "'<'", "'>'", "'<='", "'>='", "'=='", "'!='", "'+'", 
			"'-'", "'*'", "'/'", "'%'", "'null'", "'then'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "CLASS", "EXTENDS", "ABRCHAVE", "PTVIR", "FECHCHAVE", "INT", "STRING", 
			"ABRCOL", "FECHCOL", "VIRG", "CONSTRUCTOR", "ABRPAR", "FECHPAR", "BREAK", 
			"ATR", "PRINT", "READ", "RETURN", "SUPER", "IF", "ELSE", "FOR", "PONTO", 
			"NEW", "MENOR", "MAIOR", "MENORIG", "MAIORIG", "IGUAL", "DIFER", "OPMAIS", 
			"OPMENOS", "OPVEZES", "OPDIV", "OPMOD", "NULL", "THEN", "INTCONSTANT", 
			"STRINGCONSTANT", "IDENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "LL1Xcc.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LL1XccParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public Program2Context program2() {
			return getRuleContext(Program2Context.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LL1XccListener ) ((LL1XccListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LL1XccListener ) ((LL1XccListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			setState(106);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(104);
				program2();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Program2Context extends ParserRuleContext {
		public Program3Context program3() {
			return getRuleContext(Program3Context.class,0);
		}
		public Program2Context program2() {
			return getRuleContext(Program2Context.class,0);
		}
		public Program2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program2; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LL1XccListener ) ((LL1XccListener)listener).enterProgram2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LL1XccListener ) ((LL1XccListener)listener).exitProgram2(this);
		}
	}

	public final Program2Context program2() throws RecognitionException {
		Program2Context _localctx = new Program2Context(_ctx, getState());
		enterRule(_localctx, 2, RULE_program2);
		try {
			setState(112);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT:
			case STRING:
			case ABRPAR:
			case OPMAIS:
			case OPMENOS:
			case NULL:
			case INTCONSTANT:
			case STRINGCONSTANT:
			case IDENT:
				enterOuterAlt(_localctx, 1);
				{
				setState(108);
				program3();
				setState(109);
				program2();
				}
				break;
			case EOF:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Program3Context extends ParserRuleContext {
		public ExpsContext exps() {
			return getRuleContext(ExpsContext.class,0);
		}
		public DecContext dec() {
			return getRuleContext(DecContext.class,0);
		}
		public Program3Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program3; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LL1XccListener ) ((LL1XccListener)listener).enterProgram3(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LL1XccListener ) ((LL1XccListener)listener).exitProgram3(this);
		}
	}

	public final Program3Context program3() throws RecognitionException {
		Program3Context _localctx = new Program3Context(_ctx, getState());
		enterRule(_localctx, 4, RULE_program3);
		try {
			setState(116);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(114);
				exps();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(115);
				dec();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DecContext extends ParserRuleContext {
		public VardeclContext vardecl() {
			return getRuleContext(VardeclContext.class,0);
		}
		public TerminalNode PTVIR() { return getToken(LL1XccParser.PTVIR, 0); }
		public DecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LL1XccListener ) ((LL1XccListener)listener).enterDec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LL1XccListener ) ((LL1XccListener)listener).exitDec(this);
		}
	}

	public final DecContext dec() throws RecognitionException {
		DecContext _localctx = new DecContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_dec);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			vardecl();
			setState(119);
			match(PTVIR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VardeclContext extends ParserRuleContext {
		public IntstringidentContext intstringident() {
			return getRuleContext(IntstringidentContext.class,0);
		}
		public TerminalNode IDENT() { return getToken(LL1XccParser.IDENT, 0); }
		public ColsContext cols() {
			return getRuleContext(ColsContext.class,0);
		}
		public Vardecl1Context vardecl1() {
			return getRuleContext(Vardecl1Context.class,0);
		}
		public VardeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vardecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LL1XccListener ) ((LL1XccListener)listener).enterVardecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LL1XccListener ) ((LL1XccListener)listener).exitVardecl(this);
		}
	}

	public final VardeclContext vardecl() throws RecognitionException {
		VardeclContext _localctx = new VardeclContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_vardecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			intstringident();
			setState(122);
			match(IDENT);
			setState(123);
			cols();
			setState(124);
			vardecl1();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IntstringidentContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(LL1XccParser.INT, 0); }
		public TerminalNode STRING() { return getToken(LL1XccParser.STRING, 0); }
		public TerminalNode IDENT() { return getToken(LL1XccParser.IDENT, 0); }
		public IntstringidentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_intstringident; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LL1XccListener ) ((LL1XccListener)listener).enterIntstringident(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LL1XccListener ) ((LL1XccListener)listener).exitIntstringident(this);
		}
	}

	public final IntstringidentContext intstringident() throws RecognitionException {
		IntstringidentContext _localctx = new IntstringidentContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_intstringident);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << STRING) | (1L << IDENT))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ColsContext extends ParserRuleContext {
		public TerminalNode ABRCOL() { return getToken(LL1XccParser.ABRCOL, 0); }
		public TerminalNode INTCONSTANT() { return getToken(LL1XccParser.INTCONSTANT, 0); }
		public TerminalNode FECHCOL() { return getToken(LL1XccParser.FECHCOL, 0); }
		public ColsContext cols() {
			return getRuleContext(ColsContext.class,0);
		}
		public ColsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cols; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LL1XccListener ) ((LL1XccListener)listener).enterCols(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LL1XccListener ) ((LL1XccListener)listener).exitCols(this);
		}
	}

	public final ColsContext cols() throws RecognitionException {
		ColsContext _localctx = new ColsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_cols);
		try {
			setState(133);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ABRCOL:
				enterOuterAlt(_localctx, 1);
				{
				setState(128);
				match(ABRCOL);
				setState(129);
				match(INTCONSTANT);
				setState(130);
				match(FECHCOL);
				setState(131);
				cols();
				}
				break;
			case PTVIR:
			case VIRG:
			case FECHPAR:
			case IDENT:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Vardecl1Context extends ParserRuleContext {
		public TerminalNode VIRG() { return getToken(LL1XccParser.VIRG, 0); }
		public TerminalNode IDENT() { return getToken(LL1XccParser.IDENT, 0); }
		public ColsContext cols() {
			return getRuleContext(ColsContext.class,0);
		}
		public Vardecl1Context vardecl1() {
			return getRuleContext(Vardecl1Context.class,0);
		}
		public Vardecl1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vardecl1; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LL1XccListener ) ((LL1XccListener)listener).enterVardecl1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LL1XccListener ) ((LL1XccListener)listener).exitVardecl1(this);
		}
	}

	public final Vardecl1Context vardecl1() throws RecognitionException {
		Vardecl1Context _localctx = new Vardecl1Context(_ctx, getState());
		enterRule(_localctx, 14, RULE_vardecl1);
		try {
			setState(141);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case VIRG:
				enterOuterAlt(_localctx, 1);
				{
				setState(135);
				match(VIRG);
				setState(136);
				match(IDENT);
				setState(137);
				cols();
				setState(138);
				vardecl1();
				}
				break;
			case PTVIR:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpsContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ExpsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exps; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LL1XccListener ) ((LL1XccListener)listener).enterExps(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LL1XccListener ) ((LL1XccListener)listener).exitExps(this);
		}
	}

	public final ExpsContext exps() throws RecognitionException {
		ExpsContext _localctx = new ExpsContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_exps);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstructdeclContext extends ParserRuleContext {
		public TerminalNode CONSTRUCTOR() { return getToken(LL1XccParser.CONSTRUCTOR, 0); }
		public MethodbodyContext methodbody() {
			return getRuleContext(MethodbodyContext.class,0);
		}
		public ConstructdeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constructdecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LL1XccListener ) ((LL1XccListener)listener).enterConstructdecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LL1XccListener ) ((LL1XccListener)listener).exitConstructdecl(this);
		}
	}

	public final ConstructdeclContext constructdecl() throws RecognitionException {
		ConstructdeclContext _localctx = new ConstructdeclContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_constructdecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(145);
			match(CONSTRUCTOR);
			setState(146);
			methodbody();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MethoddeclContext extends ParserRuleContext {
		public IntstringidentContext intstringident() {
			return getRuleContext(IntstringidentContext.class,0);
		}
		public ColsContext cols() {
			return getRuleContext(ColsContext.class,0);
		}
		public TerminalNode IDENT() { return getToken(LL1XccParser.IDENT, 0); }
		public MethodbodyContext methodbody() {
			return getRuleContext(MethodbodyContext.class,0);
		}
		public MethoddeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_methoddecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LL1XccListener ) ((LL1XccListener)listener).enterMethoddecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LL1XccListener ) ((LL1XccListener)listener).exitMethoddecl(this);
		}
	}

	public final MethoddeclContext methoddecl() throws RecognitionException {
		MethoddeclContext _localctx = new MethoddeclContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_methoddecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			intstringident();
			setState(149);
			cols();
			setState(150);
			match(IDENT);
			setState(151);
			methodbody();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MethodbodyContext extends ParserRuleContext {
		public TerminalNode ABRPAR() { return getToken(LL1XccParser.ABRPAR, 0); }
		public ParamlistContext paramlist() {
			return getRuleContext(ParamlistContext.class,0);
		}
		public TerminalNode FECHPAR() { return getToken(LL1XccParser.FECHPAR, 0); }
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public MethodbodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_methodbody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LL1XccListener ) ((LL1XccListener)listener).enterMethodbody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LL1XccListener ) ((LL1XccListener)listener).exitMethodbody(this);
		}
	}

	public final MethodbodyContext methodbody() throws RecognitionException {
		MethodbodyContext _localctx = new MethodbodyContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_methodbody);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(153);
			match(ABRPAR);
			setState(154);
			paramlist();
			setState(155);
			match(FECHPAR);
			setState(156);
			statement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamlistContext extends ParserRuleContext {
		public IntstringidentContext intstringident() {
			return getRuleContext(IntstringidentContext.class,0);
		}
		public TerminalNode IDENT() { return getToken(LL1XccParser.IDENT, 0); }
		public ColsContext cols() {
			return getRuleContext(ColsContext.class,0);
		}
		public Paramlist1Context paramlist1() {
			return getRuleContext(Paramlist1Context.class,0);
		}
		public ParamlistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paramlist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LL1XccListener ) ((LL1XccListener)listener).enterParamlist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LL1XccListener ) ((LL1XccListener)listener).exitParamlist(this);
		}
	}

	public final ParamlistContext paramlist() throws RecognitionException {
		ParamlistContext _localctx = new ParamlistContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_paramlist);
		try {
			setState(164);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT:
			case STRING:
			case IDENT:
				enterOuterAlt(_localctx, 1);
				{
				setState(158);
				intstringident();
				setState(159);
				match(IDENT);
				setState(160);
				cols();
				setState(161);
				paramlist1();
				}
				break;
			case FECHPAR:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Paramlist1Context extends ParserRuleContext {
		public TerminalNode VIRG() { return getToken(LL1XccParser.VIRG, 0); }
		public IntstringidentContext intstringident() {
			return getRuleContext(IntstringidentContext.class,0);
		}
		public TerminalNode IDENT() { return getToken(LL1XccParser.IDENT, 0); }
		public ColsContext cols() {
			return getRuleContext(ColsContext.class,0);
		}
		public Paramlist1Context paramlist1() {
			return getRuleContext(Paramlist1Context.class,0);
		}
		public Paramlist1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paramlist1; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LL1XccListener ) ((LL1XccListener)listener).enterParamlist1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LL1XccListener ) ((LL1XccListener)listener).exitParamlist1(this);
		}
	}
